--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -100,6 +100,12 @@
       </li>
 
       <li class="nav-item">
+        <a class="nav-link" href="{{url_for('time.get_time')}}">
+          <i class="fa fa-plus-square"></i>
+          <span>Working Time</span></a>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link" href="{{url_for('priority.get_priority')}}">
           <i class="fa fa-ambulance"></i>
           <span>Priority</span></a>
