--- a/dashboard/templates/orders.html
+++ b/dashboard/templates/orders.html
@@ -128,8 +128,10 @@
                       <div class="form-group">
                         <label for="exampleFormControlSelect1">Choose Time :</label>
                         <select class="form-control" id="exampleFormControlSelect1" name="Time">
-                          <option value="Flexible">Flexible</option>
-                        </select>
+                          {% for item in TimeItems %}
+                          <option value="{{ item.IdTime }}">{{ item.TimeDec }}</option>
+                          {% endfor %}
+                            </select>
                       </div>
                       <div class="form-group">
                         <label for="inputAddress2">Selected Date :</label>
@@ -276,8 +278,10 @@
           <div class="form-group">
             <label for="exampleFormControlSelect1">Choose Time :</label>
             <select class="form-control" id="exampleFormControlSelect1" name="Time">
-              <option value="Flexible">Flexible</option>
-            </select>
+              {% for item in TimeItems %}
+              <option value="{{ item.IdTime }}">{{ item.TimeDec }}</option>
+              {% endfor %}
+                </select>
           </div>
           <div class="form-group">
             <label for="inputAddress2">Selected Date :</label>
